platforms/gke/base/use-cases/federated-learning/terraform/config_management/files/common/servicemesh/egress-gateway.yaml
# Copyright 2024 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
---
apiVersion: v1
kind: Namespace
metadata:
  name: istio-egress
  labels:
    istio-injection: "enabled"
    tenant-ns: "false"
---
apiVersion: v1
kind: Service
metadata:
  name: istio-egressgateway
  namespace: istio-egress
spec:
  type: ClusterIP
  selector:
    app: istio-egressgateway
    istio: egressgateway
  ports:
    - name: http2
      port: 80
      protocol: TCP
      targetPort: 8080
    - name: https
      port: 443
      protocol: TCP
      targetPort: 8443
    - name: status-port
      port: 15021
      protocol: TCP
      targetPort: 15021
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: istio-egressgateway
  namespace: istio-egress
spec:
  selector:
    matchLabels:
      app: istio-egressgateway
      istio: egressgateway
  strategy:
    rollingUpdate:
      maxSurge: 100%
      maxUnavailable: 25%
  template:
    metadata:
      annotations:
        # This is required to tell Cloud Service Mesh to inject the gateway with
        # the required configuration.
        inject.istio.io/templates: gateway
      labels:
        app: istio-egressgateway
        istio: egressgateway
    spec:
      serviceAccountName: istio-egressgateway-service-account
      containers:
        - name: istio-proxy
          # The image will automatically update each time the pod starts
          image: auto
          resources:
            limits:
              cpu: 2000m
              memory: 1024Mi
            requests:
              cpu: 100m
              memory: 128Mi
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
              # Deploy these Pods only in the system node pool
              - matchExpressions:
                  - key: resource-type
                    operator: In
                    values:
                      - system
      tolerations:
        - effect: NoSchedule
          key: "components.gke.io/gke-managed-components"
          operator: "Equal"
          value: "true"
---
# Load balance traffic to the egress gateway, and enable mTLS
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: target-egress-gateway
  namespace: istio-system
spec:
  host: istio-egressgateway.istio-egress.svc.cluster.local
  subsets:
    - name: target-egress-gateway-mTLS
      trafficPolicy:
        loadBalancer:
          simple: ROUND_ROBIN
        tls:
          mode: ISTIO_MUTUAL
---
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: egress-gateway
  namespace: istio-egress
spec:
  selector:
    istio: egressgateway
  servers:
    - port:
        number: 8080
        name: http2
        protocol: HTTP2
      hosts:
        - "*"
    - port:
        number: 8443
        name: https
        protocol: TCP
      hosts:
        - "*"
    - port:
        number: 15021
        name: status-port
        protocol: TCP
      hosts:
        - "*"
---
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: allow-all-egress-from-egressgateway
  namespace: istio-egress
spec:
  rules:
    - {}
